fix: burger button mobile

--- a/coffee-house/src/css/styles.css
+++ b/coffee-house/src/css/styles.css
@@ -812,6 +812,7 @@ main{
         float: inline-end;
         display: inline-flex;
         cursor: pointer;
+        margin-top: -6px;
     }
     .nav, .menu-item {
        position: fixed;
